🔧 Optimizing palettes more.